# helpdesk-mcp-server

./: .dockerignore  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml  requirements.txt
server/: config.py  main.py
server/crud/: service.py  service_request.py
server/db/: init_db.py
server/models/: service.py  service_request.py
server/schemas/: service.py  service_request.py
server/tools/: service.py  service_request.py
